Fix contrast on form background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -728,7 +728,7 @@ h2 i {
 
 .form-style {
     margin: 5% 5% 10% 5%;
-    background-color: rgba(22, 41, 63, 0.877);
+    background-color: rgba(22, 41, 63, 0.926);
     padding: 35px 25px 35px 25px;
     border-radius: .6rem;
 }
